--- a/README.ipynb
+++ b/README.ipynb
@@ -53,18 +53,18 @@
    "source": [
     "目标为对信号波形的分类：如体动和安静状态\n",
     "可以提取的信号特征有：\n",
-    "- ### 平均值 $\\bar{X} = \\frac{1}{n} \\sum_{i=1}^{n}x_i$\n",
-    "- ### 方差 $\\delta ^2 = \\frac{1}{n-1}\\sum_{i=1}^{n}\\left ( x_i - \\bar{X} \\right )^2$ \n",
-    "- ### 峰值 $X_{peak} = max\\left ( \\left | x_i \\right | \\right )$\n",
-    "- ### 整流平均值 $X_{arv} = \\frac{1}{n}\\sum_{i = 1}^{n}\\left | x_i \\right |$ \n",
-    "- ### 均方根值 $X_{rms}=\\sqrt{\\frac{1}{n}\\sum_{i=1}^{n}x_i^2}$\n",
-    "- ### 鞘度指标 $K = \\frac{\\frac{1}{n}\\sum_{i=1}^{n}\\left ( x_i - \\bar{X} \\right )^4}{\\delta ^4}$\n",
-    "- ### 峰值因子 $C=X_{peak}/X_{rms}$\n",
-    "- ### 脉冲指标 $I = X_{peak}/X_{arv}$\n",
-    "- ### 波形因子 $S = X_{rms}/X_{arv}$\n",
-    "- ### 裕度系数 $L = \\frac{峰值}{方根幅值} = \\frac{X_{peak}}{\\left [ \\frac{1}{n}\\sum_{i=1}^{n}\\sqrt{\\left | x_i \\right |} \\right ]^2}$\n",
-    "- ### 偏斜度 $\\alpha = \\frac{\\frac{1}{n}\\sum_{i=1}^{n}\\left ( x_i - \\bar{X} \\right )^3}{\\delta ^3}$\n",
-    "- ### 过零点数 `信号由正到负或由负变正穿过零点的次数`"
+    "### 平均值 $\\bar{X} = \\frac{1}{n} \\sum_{i=1}^{n}x_i$\n",
+    "### 方差 $\\delta ^2 = \\frac{1}{n-1}\\sum_{i=1}^{n}\\left ( x_i - \\bar{X} \\right )^2$ \n",
+    "### 峰值 $X_{peak} = max\\left ( \\left | x_i \\right | \\right )$\n",
+    "### 整流平均值 $X_{arv} = \\frac{1}{n}\\sum_{i = 1}^{n}\\left | x_i \\right |$ \n",
+    "### 均方根值 $X_{rms}=\\sqrt{\\frac{1}{n}\\sum_{i=1}^{n}x_i^2}$\n",
+    "### 鞘度指标 $K = \\frac{\\frac{1}{n}\\sum_{i=1}^{n}\\left ( x_i - \\bar{X} \\right )^4}{\\delta ^4}$\n",
+    "### 峰值因子 $C=X_{peak}/X_{rms}$\n",
+    "### 脉冲指标 $I = X_{peak}/X_{arv}$\n",
+    "### 波形因子 $S = X_{rms}/X_{arv}$\n",
+    "### 裕度系数 $L = \\frac{\\mbox{峰值}}{\\mbox{方根幅值}} = \\frac{X_{peak}}{\\left [ \\frac{1}{n}\\sum_{i=1}^{n}\\sqrt{\\left | x_i \\right |} \\right ]^2}$\n",
+    "### 偏斜度 $\\alpha = \\frac{\\frac{1}{n}\\sum_{i=1}^{n}\\left ( x_i - \\bar{X} \\right )^3}{\\delta ^3}$\n",
+    "### 过零点数 `信号由正到负或由负变正穿过零点的次数`"
    ]
   },
   {
