--- a/README.ipynb
+++ b/README.ipynb
@@ -68,6 +68,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "已经标注好的数据在`../xtt/6.18整晚/6.18labview计算结果.xlsx`文件里，一个sheet对应一个数据，其中每45个数据点作为一个周期集合，一行有四个数据，倒数第二个数据为离床判定 1 为离床，倒数第一个为体动判定 1 为体动。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        0  0.1  0.2  1\n",
+      "0     0.0    0    0  1\n",
+      "1     0.0    0    0  1\n",
+      "2     0.0    0    0  1\n",
+      "3     0.0    0    0  1\n",
+      "4     0.0    0    0  1\n",
+      "...   ...  ...  ... ..\n",
+      "9711  0.0    0    0  0\n",
+      "9712  0.0    0    0  0\n",
+      "9713  0.0    0    0  0\n",
+      "9714  0.0    0    0  0\n",
+      "9715  0.0    0    0  0\n",
+      "\n",
+      "[9716 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_excel('../xtt/6.18整晚/6.18labview计算结果.xlsx', sheet_name=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[0][3])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
